test/negative/format_bad_arg.mut
# format() with unsupported argument type — should fail
nums: List[i64] = List[i64]()
s := format("list: {}", nums)
print(s)
